# kansuji2digit

./: .gitignore  README.md  win_clean.bat  win_dist.bat  win_dist_test.bat  win_install.bat  win_setup.bat
python/: LICENCE  MANIFEST.in  README.md  setup.cfg
python/src/kansuji2digit/: __init__.py  __main__.py
src/: Makefile.gcc  Makefile.msvc  kansuji2arabic.cpp  kansuji2arabic.h  kansuji2digit.cpp  kansuji2digit.h  kansuji2digit.i  kansuji2digit.py  kansuji2digit_wrap.cpp  main.cpp  main.py  test.txt  win_install.bat
