[metadata]
name = kansuji2digit
version = 0.1.2
author = nanamedou
description = It convert kansuji to digit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanamedou/kansuji2digit
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = src